# socio-echo-be

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
.sqlx/: query-2deab69d89f6b9bcd3e097d5861a1a71caf03ab3017363d34d91ef2748b6ac43.json  query-3208571e2b5885971e658a787362c20cc556de48f415156481d201b72af06fd1.json  query-4ccf8d5f5a061d6b48df514b9ea8eb5835c3a8b34b0746f88c0a801d6d3d1585.json  query-5ba727bcd11f55851e83d3c3ffa64022192aeb54dceae49915c1d447af145035.json  query-6a096c042fd0a490d40ae75a094b66df6f7244b41432226adfaa778abaa76184.json  query-887288f553358d96690c16494d29829a7d7fd85d57db3a124604a54dbcda1657.json  query-93bac82f1c567f71a5731690e208ec7ed8da8892407fdee6933cfef6445a8a31.json
migrations/: 20240320000000_create_users_table.sql  20250614044311_create_submission_table.sql
src/: config.rs  main.rs  utils.rs
src/commons/: minio_service.rs  mod.rs
src/controllers/: auth.rs  dashboard.rs  mod.rs
src/models/: user.rs
src/repositories/: user_repository.rs
src/services/: auth_service.rs  face_match_service.rs  metrics_service.rs  mod.rs
src/submissions/: mod.rs  submission_controller.rs  submission_repository.rs  submission_service.rs
src/submissions/dto/: mod.rs  presigned_urls_response.rs
