[package]
name = "socio_echo_be"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-rt = "2.9"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.2"
argon2 = "0.5"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
log = "0.4"
validator = { version = "0.16", features = ["derive"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
statsd = "0.16.1"
aws-sdk-s3 = "1.3.0"
base64 = "0.21"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
elasticsearch = "8.18.0-alpha.1"
actix-cors = "0.7"

